--- a/coffee.css
+++ b/coffee.css
@@ -736,3 +736,26 @@ h5{
     margin-top: 40px;
 
 }
+ .ficon{
+   
+   
+        width:60%;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 60px;
+    }
+    .ficon .icon{
+        width:40px;
+        height:40px;
+        border-radius: 50%;
+        line-height: 40px;
+        background-color:#614a3d ;
+    }
+    .icon i{
+        color:#fff;
+    }
+    .ficon .icon:hover{
+        background-color: steelblue;
+    }
+
