--- a/coffee.css
+++ b/coffee.css
@@ -13,6 +13,26 @@ margin-bottom: 50px;
 
    
     }
+    .toggle{
+        width:50px;
+        height: 50px;
+        /* float: left; */
+        position:absolute;
+        right: 5px;
+        top: 20px;
+        display: none;
+        
+        
+        }
+        .toggle .bar{
+            width:30px;
+            height:3px;
+            background-color: white;
+            border-radius: 2px;
+            margin-bottom: 5px;
+        }
+
+
     .navbar{
         width: 100%;
         height: 70px;
@@ -191,6 +211,7 @@ opacity: 0;
             padding-left: 20%;
             font-style: normal;
             text-transform: capitalize;
+            color:gray;
             
         }
         .footer-box .title{
@@ -273,7 +294,7 @@ opacity: 0;
         footer h2{
             line-height: 18px;
             margin: 0;
-            color: black;
+            color: white;
 
             
         }
@@ -337,9 +358,12 @@ opacity: 0;
    
 }
 .container1 .left{
-    width:49%;
+    width:50%;
 padding: 0 20px;
+box-sizing: border-box;
 }
+
+
 .left h3{
     color: #180e08;
     font-size: 25px;
@@ -364,11 +388,12 @@ padding: 0 20px;
 
 }
 .container1 .right{
-    width:45%;
+    width:50%;
 padding: 20px 20px;
 
     background: url(imges/about-2.jpg);
-    background-size: cover;
+    box-sizing: border-box;
+    background-repeat: no-repeat;
 }
 .container1 span{
     color: white;
@@ -382,15 +407,17 @@ padding: 20px 20px;
 
    
 }
-.container1 .box-1{
-    width:24%;
-    /* background-color: #180e08; */
+.container1 .box-1 ,.box-2,.box-3, .box-4{
+    width:25%;
     height: 300px;
+    overflow: hidden;
+}
+.container1 .box-1{
+   
     background: url(imges/1\(1\).jpg);
     background-size: cover;
     overflow: hidden;
     transition: 1s;
-   /* z-index: 2; */
 
 }
 span i{
@@ -405,8 +432,7 @@ span i{
 
 
     position: relative;
-    /* top:-23px; */
-   /* z-index: 3; */
+   
    transition: .1s;
 
     
@@ -415,10 +441,10 @@ span i{
 
 
 .container1 .box-2{
-    width:24%;
-    height:300px;
+    
     background: url(imges/2\(1\).jpg);
     background-size: cover;
+   
 
 }
 .box-2 .topbox2{
@@ -431,9 +457,7 @@ span i{
 
 }
 .box-3{
-    width:24%;
    
-    height: 300px;
     background: url(imges/3\ \(1\).jpg);
     background-size: cover;
 }
@@ -446,9 +470,7 @@ span i{
 
 }
 .box-4{
-    width:24%;
    
-    height: 300px;
     background: url(imges/4.jpg);
     background-size: cover;
    
@@ -458,7 +480,6 @@ span i{
     background-color: #180e08dc;
     height: 300px;
     position: relative;
-    /* top:-23px; */
 
 }
 .topbox:hover,.topbox2:hover,.topbox3:hover,.topbox4:hover{
@@ -614,6 +635,7 @@ h5{
           margin-bottom: 10px;
           border: 1px solid gray;
           padding-left: 20px;
+          box-sizing: border-box;
       }
 
       .submitbtn{
@@ -757,5 +779,241 @@ h5{
     }
     .ficon .icon:hover{
         background-color: steelblue;
+    }
+    #myBtn {
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 30px;
+        z-index: 99;
+        font-size: 18px;
+        border: none;
+        outline: none;
+        background-color: red;
+        color: white;
+        cursor: pointer;
+        padding: 5px;
+        border-radius: 4px;
+      }
+      
+      #myBtn:hover {
+        background-color: #555;
+      }
+
+/* tablet responsive */
+      @media only screen and (max-width: 768px)
+      {
+        .navbar img {
+           
+            left: 35px;
+            width: 70px;
+        }
+        .navbar ul {
+            left: 120px;
+           
+            box-sizing: border-box;
+        }
+        .navbar ul li {
+           
+            max-width: 120px;
+      }
+
+
+
+
+    
+    .container1{
+        display: block;
+    }
+
+
+    .container1 .left {
+       float: left;
+    }
+    .container1 .right{
+        float: left;
+        height:550px;
+        padding:0;
+    
+    }
+.container1 .box-1 ,.box-2 ,.box-3 ,.box-4{
+    width:48%;
+    float: left;
+    margin: 0 2px 10px 2px;
+}
+ 
+.container1 .input{
+    width:46%;
+    margin:0 2%;
+    float: left;
+}
+.submitbtn{
+    top:0;
+    left:0;
+}
+.headbox{
+    padding-top: 0;
+}
+/* .team-wrap{
+    display: block;
+}
+.team-wrap .team1{
+    width:48%;
+    float: left;
+} */
+
+.social .icon {
+    width: 27px;
+    height: 27px;
+    line-height: 27px;
+}
+
+.footer-elementor-text {
+   
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+
+    }
+
+
+
+    @media only screen and (max-width: 425px)
+    {
+        .toggle{
+            display: block;
+        }
+        .navbar-logo {
+            /* padding-left: 40px;
+            margin-right: 50px;
+            margin-left: 56px; */
+            text-align: center;
+        }
+        #id3{
+            color: white;
+            font-size: 30px;
+            position: absolute;
+            right: 15px;
+            top: 20px;
+            display: none;
+        }
+        /* .navbar ul {
+           
+            width: 100%;
+        position: absolute;
+        top: 38px;
+        } */
+        #id2{
+            display: none;
+
+    
+        }
+
+        .navbar ul{
+       
+            left: 70px;
+            float: left;
+            list-style-type: none;
+            position: relative;
+            padding-top: 50px;
+        }
+        .navbar  ul li{
+          display: block;
+          margin-bottom: 10px;
+
+           
+            
+            
+        }
+        .heading1{
+            margin-top: 240px;
+        }
+
+
+
+      .container1{
+          display: block;
+
+      }
+      .container1 .left {
+        width: 100%;
+        padding:  20px;
+    }
+    .container1 .right{
+        width:100%;
+    }
+    .container1 .box-1 ,.box-2 ,.box-3 ,.box-4{
+        width:100%;
+        /* float: left; */
+        margin: 0 2px 10px 2px;
+    }
+     
+    .container1 .input{
+        width:46%;
+        margin:0 2%;
+        float: left;
+    }
+     .container1 .team-wrap{
+        display: block;
+    }
+    .team-wrap .menu1{
+        width:100%;
+        float: left;
+        margin-bottom: 135px;
+    }
+    .container1 .input{
+        width:100%;
+        margin:0 ;
+        /* float: left; */
+    }
+    .team-wrap .team1{
+        width:100%;
+    }
+
+    .social .icon {
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+    }
+
+
+    .bottomtext .social {
+        width: 40%;
+    }
+
+    footer .menu {
+        color:gray;
+    }
+    .menu ul li a {
+      color: gray;}
+
+footer h2 , h4{
+    color: gray;
+}
+    /* contact */
+
+    .map .con-box {
+        width: 250px;
+        height: 270px;
+       
+       left: 35%;
+        padding-top: 18px;
+        background: lightslategray;
+    }
+    
+    .con-box .single-box{
+        margin-bottom: -29px;
+    }
+    h1{
+        font-size: 15px;
+    }
+    .ficon .icon {
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        line-height: 25px;
+        background-color: #614a3d;
+    }
+
     }
 
